<resources>
    <string name="app_name">IMDB Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="back_button">Back Button</string>
    <string name="todo">todo</string>
    <string name="result">Result</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="star">Star</string>
    <string name="summary">Summary :</string>
    <string name="genre">Genre :</string>
    <string name="directors">Directors :</string>
    <string name="writers">Writers :</string>
    <string name="stars">Stars :</string>
    <string name="story_line">Story Line :</string>
    <string name="movie_name">movie name...</string>
    <string name="cinema_image">Cinema Image</string>
</resources>
