<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.MainFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/cinemaImage"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:contentDescription="@string/cinema_image"
            android:src="@drawable/ic_cinema" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_medium"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/internetError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/rubik_medium"
            android:gravity="center"
            android:textColor="@color/gray"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/movieName_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:hint="@string/movie_name"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:padding="16dp"
            android:shadowColor="@color/IMDB_Yellow"
            android:textColor="@android:color/white"
            android:textColorHint="#807F7F"
            android:visibility="gone"
            app:backgroundTint="@color/IMDB_Yellow" />

        <Button
            android:id="@+id/search_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/search_button"
            android:gravity="center"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:visibility="gone" />


    </LinearLayout>


</FrameLayout>